# svg-wallpaper-gen

./: README.md  pyproject.toml
.github/workflows/: coverage.yml
src/svg_wallpaper_gen/: Hexagonal.py  converter.py  generator_app.py
src/svg_wallpaper_gen/__marimo__/session/: generator_app.py.json
tests/: test_Hexagonal.py
