[project]
name = "svg-wallpaper-gen"
version = "0.1.0"
description = ""
authors = [
    {name = "Gwenn",email = "gwenn.garrigues@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow (>=12.0.0,<13.0.0)"
]

[tool.poetry]
packages = [{include = "svg_wallpaper_gen", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
